--- a/Marketing.tex
+++ b/Marketing.tex
@@ -19,9 +19,8 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
       \begin{centering}
       \includegraphics[width = 1\textwidth]{Bilder/swot.jpg}
       \par\end{centering}
-      \caption{SWOT-Analyse Grafik}
+      \caption[SWOT-Analyse Grafik]{SWOT-Analyse Grafik\cite{pic_swot}}
       \label{swot}
-      \footcite{pic_swot}
     \end{figure}
 
     \subsection*{Die vier Strategien:}
@@ -46,7 +45,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     \subsection*{Portfolioanalyse nach Boston Consulting Group}
     Die Definition laut {"Boston Consulting Group"\cite{portfolioanalyse}} beschreibt die Portfolioanalyse wie folgt:
     "Das BCG-Portfolio erlaubt eine Bewertung strategisch relevanter Geschäftseinheiten auf Basis zukünftiger Gewinnchancen (Marktwachstum) und der
-    gegenwärtigen Wettbewerbsposition (relativer Marktanteil)." (http://www.bcg.de/bcg_deutschland/geschichte/klassiker/portfoliomatrix.aspx; Zugegriffen 26.02.2016)
+    gegenwärtigen Wettbewerbsposition (relativer Marktanteil)."
     Anders gesagt: Diese Analyse hilft dabei Teile eines Unternehmens wie Produkte oder Dienstleistungen
     nach Kosten und Ertrag einzuschätzen und in vier Kategorien zu unterteilen.
 
@@ -54,9 +53,8 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
       \begin{centering}
       \includegraphics[width = 1\textwidth]{Bilder/portfoliomatrix.jpg}
       \par\end{centering}
-      \caption{Portfoliomatrix}
+      \caption[Portfoliomatrix]{Portfoliomatrix\cite{pic_matrix}}
       \label{matrix}
-      \footcite{pic_matrix}
     \end{figure}
 
     \begin{itemize}
@@ -294,7 +292,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
 
       Beispiel JavaScript:
 
-      \lstset{language=javascript}
+      \lstset{language=html}
       	\begin{lstlisting}
           /**
            * Liefert alle <li> Elemente, die sich in einem Element mit der ID "navbar-list" befinden.
@@ -305,7 +303,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
 
       Beispiel: jQuery:
 
-      \lstset{language=javascript}
+      \lstset{language=html}
       	\begin{lstlisting}
           /**
            * Liefert alle <li> Elemente, die sich in einem Element mit der ID "navbar-list" befinden.
