--- a/Digitale_Speisekarte.tex
+++ b/Digitale_Speisekarte.tex
@@ -448,8 +448,8 @@ Das finale Layout der Screens sieht daher folgendermaßen aus:\\
 \textbf{Screens der digitalen Speisekarte}
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_login}
-			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_tnr}
+			\fbox{ \includegraphics[width = 0.47\textwidth]{Bilder/Jok_login} }
+			\fbox{ \includegraphics[width = 0.47\textwidth]{Bilder/Jok_tnr} }
 			\par\end{centering}
 			\caption{Screens: Loginscreen / Tischnummernauswahl}
 			\label{Screens: Loginscreen / Tischnummernauswahl}
@@ -457,8 +457,8 @@ Das finale Layout der Screens sieht daher folgendermaßen aus:\\
 			
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_speisekarte}
-			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_status}
+			\fbox{ \includegraphics[width = 0.47\textwidth]{Bilder/Jok_speisekarte} }
+			\fbox{ \includegraphics[width = 0.47\textwidth]{Bilder/Jok_status} }
 			\par\end{centering}
 			\caption{Screens: Speisekarte / Bestellungsüberblick}
 			\label{Screens: Speisekarte / Bestellungsüberblick}
